MCKIN-2086, fixes discussion z-index issues

--- a/static/scss/courses/index.scss
+++ b/static/scss/courses/index.scss
@@ -58,7 +58,7 @@
 #course-syllabus{
   .global-help,
   .global-help:visited {
-    z-index: 100;
+    z-index: 98;
     color: $mckinsey-academy-bright-gray;
     position: absolute;
     top: 10px;
